--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-connect": "^2.2.0",
     "gulp-imagemin": "^2.3.0",
     "gulp-minify-css": "^1.1.1",
+    "gulp-pixrem": "^0.2.3",
     "gulp-sass": "^1.3.3",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.4",
